--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,7 @@
   --light-opacity: #69646487;
   --grey: #475467;
   --red: #e44848;
+  --red-hover: #d14545;
   --yellow: #ffc531;
   --light-blue: #f2f4f7;
   --light-grey: #f7f7f7;
